# Sicarii

./: .gitignore  Cargo.toml  \  code_highlight.css  index.html  justfile  package-lock.json  package.json  readme.md  style.css  tailwind.config.js  tufte.css
about/: index.html
articles/: FSAEStats.html  gv3b.html  gv3b_pt1.html  gv3b_pt2.html  haskellNN.html  monad.html  notec.html  sauron.html  sicarii.html  splisp.html  splisp1.html  splisp15.html  splisp2.html  splisp3.html  ttesting.html
assets/FSAEStats/: FSAEStats.md  FSAEStats.toml
assets/gv3b/: gv3b.md
assets/gv3b_pt1/: gv3b.md
assets/gv3b_pt2/: gv3b.md
assets/haskellNN/: haskellNN.md  haskellNN.toml  training.html
assets/latexTest/: latexTest.md  latexTest.toml
assets/monad/: group.md  monad.md  monad.toml
assets/notec/: notec.md  notec.toml
assets/sauron/: sauron.md  sauron.toml
assets/sicarii/: sicarii.md  sicarii.toml
assets/splisp/: splisp.md  splisp.toml
assets/splisp1/: splisp1.md  splisp1.toml
assets/splisp2/: splisp2.md  (+1 more)
contact/: index.html
latexpdf/: portfolio_project_summaries.aux  portfolio_project_summaries.fdb_latexmk  portfolio_project_summaries.fls  portfolio_project_summaries.out  portfolio_project_summaries.tex  portfolio_project_summaries.xdv
scripts/: build_portfolio.py  update.sh
site/: code_highlight.css  index.html  package.json  style.css  tufte.css
splisp/: splisp.md
src/: article.rs  article_meta.rs  main.rs  render.rs  structs.rs
static/: about.html  contact.html  index.html  style.css
templates/: editorial.html  editorial.html.bak  home.html
(+47 files in other folders)
