[package]
name = "editorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
chrono = {version = "^0", features = ["serde"]}
katex = "0.4.6"
kuchikiki = "0.8.2"
markdown = "1.0.0-alpha.19"
pandoc = "0.8.11"
serde = {version = "1.0.210", features = ["derive"]}
syntect = "5.2.0"
toml = "0.8.19"
walkdir = "2.5.0"
yaml-rust = "0.4.5"
