[package]
name = "editorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
regex = "1.12.2"
chrono = {version = "^0", features = ["serde"]}
kuchikiki = "0.8.2"
serde = {version = "1.0.210", features = ["derive"]}
syntect = "5.2.0"
toml = "0.8.19"
walkdir = "2.5.0"
pulldown-cmark = "0.13.0"

[profile.release-with-debug]
inherits = "release"
debug = 2
